Fix styling of array-item-axn buttons; removed no-wrap on rows

--- a/react-app/src/stylesheets/Page.scss
+++ b/react-app/src/stylesheets/Page.scss
@@ -1,5 +1,22 @@
 @import './_variables.scss';
 
+// Icons for Array-field styling
+i.glyphicon {
+  display: none;
+}
+.btn-add::after {
+  content: 'Add';
+}
+.array-item-move-up::after {
+  content: 'Move Up';
+}
+.array-item-move-down::after {
+  content: 'Move Down';
+}
+.array-item-remove::after {
+  content: 'Remove';
+}
+
 .page {
   height: calc(100vh - 56px);
   padding-top: 56px;
@@ -52,9 +69,6 @@
   overflow-y: auto;
 }
 
-.row {
-  flex-wrap: nowrap;
-}
 .col-xl-3,
 .col-lg-3,
 .col-md-3,
